[project]
name = "tmux-wrapper"
version = "0.1.3"
description = "Lightweight tmux automation wrapper and renderer."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["tmux", "terminal", "automation", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
]
dependencies = [
    "fire>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/Randomizez/TmuxWrapper"
Repository = "https://github.com/Randomizez/TmuxWrapper"
Issues = "https://github.com/Randomizez/TmuxWrapper/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
tmux-c = "tmux_wrapper:main"

[tool.setuptools]
py-modules = ["tmux_wrapper"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
