[project]
name = "tmux-wrapper"
version = "0.1.3"
description = "Lightweight tmux automation wrapper and renderer."
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
keywords = ["tmux", "terminal", "automation", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/Randomizez/TmuxWrapper"
Repository = "https://github.com/Randomizez/TmuxWrapper"
Issues = "https://github.com/Randomizez/TmuxWrapper/issues"

[project.scripts]
tmux-c = "tmux_wrapper:main"

[build-system]
requires = [
    "setuptools==59.6.0; python_version < '3.7'",
    "setuptools>=68; python_version >= '3.7'",
    "wheel",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=6.2.5,<7; python_version < '3.7'",
    "pytest>=7.4,<8; python_version >= '3.7' and python_version < '3.8'",
    "pytest>=7.4,<9; python_version >= '3.8' and python_version < '3.9'",
    "pytest>=8.4.2,<9; python_version >= '3.9' and python_version < '3.10'",
    "pytest>=9,<10; python_version >= '3.10'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
