[metadata]
name = tmux-wrapper
version = 0.1.4
description = Lightweight tmux automation wrapper and renderer.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/Randomizez/TmuxWrapper
project_urls =
    Repository = https://github.com/Randomizez/TmuxWrapper
    Issues = https://github.com/Randomizez/TmuxWrapper/issues
keywords = tmux, terminal, automation, cli
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Terminals

[options]
py_modules = tmux_wrapper
python_requires = >=3.6

[options.entry_points]
console_scripts =
    tmux-c = tmux_wrapper:main
